--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 Test
 </TITLE>
 <BODY>
+https://trisshearing.github.io/index2.html - automatic!
 [Hello World](https://trisshearing.github.io/index2.html)
 </BODY>
 </HTML>
