--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
----
-title: Home
----
-<div align="center">
-Programming for Geographical Information Analysts: Core Skills  
-Assignment 1
+<!DOCTYPE html>
+<html>
+<body>
 
-Profile  
-Tristan Shearing  
-DOB 19.10.1982
+<h1 style="text-align:center;">Centered Heading</h1>
+<p style="text-align:center;">Centered paragraph.</p>
+
+</body>
+</html>
   
