--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: Home
 <!DOCTYPE html>
 <html>
 <body>
+<font face='verdana'>
 
 <h1 style="text-align:center;">Tristan Shearing</h1>
 <h2 style="text-align:center;">Personal Website</h2>
@@ -13,7 +14,7 @@ title: Home
 <h4 style="text-align:center;">Assessment 1</h4>
              
 
-
+</font>
 </body>
 </html>
   
