--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 ---
 title: Home
 ---
-<!DOCTYPE html>
+
 <html>
 <body>
-<font face='verdana'>
+<font face='corbel'>
 
 <h1 style="text-align:center;">Tristan Shearing</h1>
 <h2 style="text-align:center;">Personal Website</h2>
-/
-/
+
+  
 <h3 style="text-align:center;">GEOG5991M Programming for Spatial Analysts</h3>
 <h4 style="text-align:center;">Assessment 1</h4>
              
