--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ title: Home
 ---
 
 <html>
-<body>
+<body style="background-color:powderblue;">
 <font face='corbel'>
 
 <h1 style="text-align:center;">Tristan Shearing</h1>
