--- a/index.html
+++ b/index.html
@@ -1,23 +1,33 @@
+  
 ---
 title: Home
 ---
 
 <html>
-<body style="background-color:powderblue;">
+<body style="background-color:black;">
 <font face='corbel'>
+<font style="color:white">
 
 <h1 style="text-align:center;">Tristan Shearing</h1>
 <h2 style="text-align:center;">Personal Website</h2>
 
-  
-<h3 style="text-align:center;">GEOG5991M Programming for Spatial Analysts</h3>
-<h4 style="text-align:center;">Assessment 1</h4>
-             
+<br/>
+<br/>
+<h3 style="text-align:center;">Profile</h3>
+<p style="text-align:center;">TRISTAN SHEARING<br/>
+DOB: 19.10.82</br>
+Location: London, Uk
+</p>
 
+  
+<h3 style="text-align:center;">GEOG5991M Programming for Spatial Analysts<br />
+Assignment 1</h3>
+
+<p style="text-align:center;"> <a href="https://www.google.com/">Agent-based Model</a>
+
+
+             
+</font>
 </font>
 </body>
 </html>
-  
-
-
-
