--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 ---
 
 <html>
-<body style="background-color:black;">
+<body style="background-color:darkgrey;">
 <font face='corbel'>
 <font style="color:white">
 
@@ -12,8 +12,8 @@ title: Home
 <h2 style="text-align:center;">Personal Website</h2>
 
 <br/>
-<br/>
-<h3 style="text-align:center;">Profile</h3>
+
+<h3 style="text-align:center;">Profile:</h3>
 <p style="text-align:center;">TRISTAN SHEARING<br/>
 DOB: 19.10.82</br>
 Location: London, Uk
