--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-  
 ---
 title: Home
 ---
@@ -10,10 +9,10 @@ title: Home
 
 <h1 style="text-align:center;">Tristan Shearing</h1>
 <h2 style="text-align:center;">Personal Website</h2>
-
+<img src="https://github.com/trisshearing/trisshearing.github.io/blob/master/me.jpg" alt="Tristan">
 <br/>
 
-<h3 style="text-align:center;">Profile:</h3>
+<h3 style="text-align:center;">About me:</h3>
 <p style="text-align:center;">TRISTAN SHEARING<br/>
 DOB: 19.10.82</br>
 Location: London, Uk
