--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <h1 style="text-align:center;">Tristan Shearing</h1>
 <h2 style="text-align:center;">Personal Website</h2>
-<img src="https://github.com/trisshearing/trisshearing.github.io/blob/master/me.jpg" alt="Tristan">
+<img src="images/me.jpg" alt="Tristan">
 <br/>
 
 <h3 style="text-align:center;">About me:</h3>
