--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <h1 style="text-align:center;">Tristan Shearing</h1>
 <h2 style="text-align:center;">Personal Website</h2>
-<img src="images/me.jpg" alt="Tristan">
+<img src="images/me.jpg" alt="Tristan" style="width:500px;height:600px;>
 <br/>
 
 <h3 style="text-align:center;">About me:</h3>
