--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
 
 <h1 style="text-align:center;">Tristan Shearing</h1>
 <h2 style="text-align:center;">Personal Website</h2>
-<img src="images/me.jpg" alt="Tristan" style="width:500px;height:600px;>
+<img src="images/me.jpg" alt="Tristan"  .frame {
+        width: 300px;
+        height: 250px;
+        border: 3px solid #ccc;
+        background: #eee;
+        margin: auto;
+        padding: 15px 10px;
+      }
+      img {
+        width: 100%;
+        height: 100%;
+      }>
 <br/>
 
 <h3 style="text-align:center;">About me:</h3>
