--- a/index.html
+++ b/index.html
@@ -6,18 +6,7 @@
 
 <h1 style="text-align:center;">Tristan Shearing</h1>
 <h2 style="text-align:center;">Personal Website</h2>
-<img src="images/me.jpg" alt="Tristan"  .frame {
-        width: 300px;
-        height: 250px;
-        border: 3px solid #ccc;
-        background: #eee;
-        margin: auto;
-        padding: 15px 10px;
-      }
-      img {
-        width: 10%;
-        height: 10%;
-      }>
+<img src="images/me.jpg" width="200" height="121" alt="Tristan">
 <br/>
 
 <h3 style="text-align:center;">About me:</h3>
