--- a/index.html
+++ b/index.html
@@ -1,29 +1,32 @@
-
 <html>
 <body style="background-color:darkgrey;">
 <font face='corbel'>
 <font style="color:white">
+<style>
+.aligncenter {
+    text-align: center;
+}
+</style>
 
-<h1 style="text-align:center;">Tristan Shearing</h1>
-<h2 style="text-align:center;">Personal Website</h2>
-<img align="middle" src="images/metiny.jpg" alt="Tristan" >
-<br/>
+<h1 class="aligncenter">Tristan Shearing</h1>
+<h2 class="aligncenter">Personal Website</h2>
+<p class="aligncenter">
+    <img src="images/me.jpg" alt="Me" />
+</p>
 
-<h3 style="text-align:center;">About me:</h3>
-<p style="text-align:center;">TRISTAN SHEARING<br/>
+
+<h3 class="aligncenter">About me:</h3>
+<p class="aligncenter">TRISTAN SHEARING<br/>
 DOB: 19.10.82</br>
 Location: London, Uk
 </p>
 
   
-<h3 style="text-align:center;">GEOG5991M Programming for Spatial Analysts<br />
+<h3 class="aligncenter">GEOG5991M Programming for Spatial Analysts<br />
 Assignment 1</h3>
 
-<p style="text-align:center;"> <a href="https://www.google.com/">Agent-based Model</a>
+<p class="aligncenter"> <a href="https://www.google.com/">Agent-based Model</a>
 
 
              
 </font>
-</font>
-</body>
-</html>
