--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <h2 class="aligncenter">Personal Website</h2>
 <hr>
 <p class="aligncenter">
-    <img src="images/me.jpg" alt="Me" />
+    <img src="images/metiny.jpg" alt="Me" />
 </p>
 
 
