--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+  
+
 <html>
 <body style="background-color:darkgrey;">
 <font face='corbel'>
@@ -10,9 +12,9 @@
 
 <h1 class="aligncenter">Tristan Shearing</h1>
 <h2 class="aligncenter">Personal Website</h2>
-<hr>
+<hr size="10" noshade>
 <p class="aligncenter">
-    <img src="images/metiny.jpg" alt="Me" />
+    <img src="images/me.jpg" alt="Me" />
 </p>
 
 
@@ -21,8 +23,8 @@
 DOB: 19.10.82</br>
 Location: London, Uk
 </p>
-
-<hr>  
+<hr size="10" noshade>
+  
 <h3 class="aligncenter">GEOG5991M Programming for Spatial Analysts<br />
 Assignment 1</h3>
 
@@ -31,3 +33,6 @@ Assignment 1</h3>
 
              
 </font>
+</font>
+</body>
+</html>
