--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Location: London, Uk
 <h3 class="aligncenter">GEOG5991M Programming for Spatial Analysts<br />
 Assignment 1</h3>
 
-<p class="aligncenter"> <a href="https://www.google.com/">Agent-based Model</a>
+<p class="aligncenter"> <a href="abm/model.py">Agent-based Model</a>
 
 
              
