--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h2 class="aligncenter">Personal Website</h2>
 <hr size="10" noshade>
 <p class="aligncenter">
-    <img src="images/me.jpg" alt="Me" />
+    <img src="images/metiny.jpg" alt="Me" />
 </p>
 
 
