--- a/index.html
+++ b/index.html
@@ -25,12 +25,15 @@ Location: London, Uk
 </p>
 <hr size="10" noshade>
   
-<h3 class="aligncenter">GEOG5991M Programming for Spatial Analysts<br />
-Assignment 1</h3>
+<h4 class="aligncenter">GEOG5991M Programming for Spatial Analysts<br />
+Assignment 1:</h4>
 
 <p class="aligncenter"> <a href="abm/model.py">Agent-based Model</a>
 
+<h4 class="aligncenter">GEOG5991M Programming for Spatial Analysts<br />
+Assignment 2:</h4>
 
+<p class="aligncenter"> <a href="abm/model.py">Agent-based Model</a>
              
 </font>
 </font>
