--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Assignment 1:</h4>
 <h4 class="aligncenter">GEOG5991M Programming for Spatial Analysts<br />
 Assignment 2:</h4>
 
-<p class="aligncenter"> <a href="abm/model.py">Agent-based Model</a>
+<p class="aligncenter"> <a href="SLM/sitelocation.py">Site Location Tool</a>
              
 </font>
 </font>
