--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Location: London, Uk
 <h4 class="aligncenter">GEOG5991M Programming for Spatial Analysts<br />
 Assignment 1:</h4>
 
-<p class="aligncenter"> <a href="abm/model.py">Agent-based Model</a>
+<p class="aligncenter"> <a href="abm/abm.html">Agent-based Model</a>
 
 <h4 class="aligncenter">GEOG5991M Programming for Spatial Analysts<br />
 Assignment 2:</h4>
