--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Assignment 1:</h4>
 <h4 class="aligncenter">GEOG5991M Programming for Spatial Analysts<br />
 Assignment 2:</h4>
 
-<p class="aligncenter"> <a href="SLM/sitelocation.py">Site Location Tool</a>
+<p class="aligncenter"> <a href="www.google.co.uk">Site Location Tool</a>
              
 </font>
 </font>
