--- a/abm/abm.html
+++ b/abm/abm.html
@@ -11,7 +11,10 @@
 <h1 class="aligncenter">Tristan Shearing</h1>
 <h2 class="aligncenter">Personal Website</h2>
 <hr size="10" noshade>
-  <h3 class="aligncenter">Assignment 1 Agent-Based model</h3>
+<h3 class="aligncenter">Assignment 1 Agent-Based model</h3>
+<p class="aligncenter"> <a href="abm/abm.zip">Download zip file</a>
+    
+    
   
   
   
