--- a/abm/abm.html
+++ b/abm/abm.html
@@ -12,7 +12,7 @@
 <h2 class="aligncenter">Personal Website</h2>
 <hr size="10" noshade>
 <h3 class="aligncenter">Assignment 1 Agent-Based model</h3>
-<p class="aligncenter"> <a href="master/abm/abm.zip"download>Download zip file</a>
+    <p class="aligncenter"> <a href="master/abm/abm.zip"download>Download zip file</a></p>
     
     
   
