--- a/index.html
+++ b/index.html
@@ -1,40 +1,54 @@
-  
 
+<!DOCTYPE html>
 <html>
-<body style="background-color:darkgrey;">
-<font face='corbel'>
-<font style="color:white">
+  <head>
+    <title>Personal Website</title>
+  </head>
+<body>
+  <body style="background-color:darkgrey;">
+
 <style>
-.aligncenter {
+* {
     text-align: center;
+    color: white;
+    font-family: Arial;
 }
 </style>
 
-<h1 class="aligncenter">Tristan Shearing</h1>
-<h2 class="aligncenter">Personal Website</h2>
-<hr size="10" noshade>
-<p class="aligncenter">
+
+<style>
+hr {
+	width="50%";
+    background: grey;
+    height: 5px;
+    border: 0px;
+   }
+</style>
+
+<h1>Tristan Shearing</h1>
+<h2>Personal Website</h2>
+<hr>
+<p>
     <img src="images/metiny.jpg" alt="Me" />
 </p>
 
 
-<p class="aligncenter">TRISTAN SHEARING<br/>
+<p>TRISTAN SHEARING<br/>
 DOB: 19.10.82</br>
 Location: London, Uk
 </p>
-<hr size="10" noshade>
+<hr>
   
-<h4 class="aligncenter">GEOG5991M Programming for Spatial Analysts<br />
+<h4>GEOG5991M Programming for Spatial Analysts<br />
 Assignment 1:</h4>
 
-<p class="aligncenter"> <a href="abm/abm.html">Agent-based Model</a>
+<p> <a href="abm/abm.html">Agent-based Model</a>
 
-<h4 class="aligncenter">GEOG5991M Programming for Spatial Analysts<br />
+<h4>GEOG5991M Programming for Spatial Analysts<br />
 Assignment 2:</h4>
 
-<p class="aligncenter"> <a href="www.google.co.uk">Site Location Tool</a>
+<p> <a href="www.google.co.uk">Site Location Tool</a>
              
-</font>
-</font>
+
 </body>
 </html>
