--- a/abm/abm.html
+++ b/abm/abm.html
@@ -1,16 +1,35 @@
+
+    
+
+<!DOCTYPE html>
 <html>
-<body style="background-color:darkgrey;">
-<font face='corbel'>
-<font style="color:white">
+  <head>
+    <title>Personal Website</title>
+  </head>
+<body>
+  <body style="background-color:darkgrey;">
+
 <style>
-.aligncenter {
+* {
     text-align: center;
+    color: white;
+    font-family: Arial;
 }
 </style>
 
-<h1 class="aligncenter">Tristan Shearing</h1>
-<h2 class="aligncenter">Personal Website</h2>
-<hr size="10" noshade>
+
+<style>
+hr {
+	width="50%";
+    background: grey;
+    height: 5px;
+    border: 0px;
+   }
+</style>
+
+<h1>Tristan Shearing</h1>
+<h2>Personal Website</h2>
+<hr>
 <h3 class="aligncenter">Assignment 1 Agent-Based model</h3>
     <p class="aligncenter"> <a href="abm.zip"download>Download zip file</a></p>
     
@@ -18,7 +37,6 @@
   
   
   
-</font>
-</font>
+
 </body>
 </html>
