--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <html>
   <head>
     <title>Personal Website</title>
+<style>
+body {
+  background-color: grey;
+}
+</style>
   </head>
 <body>
-  <body style="background-color:darkgrey;">
+  
 
 <style>
 * {
@@ -19,7 +24,7 @@
 <style>
 hr {
 	width="50%";
-    background: grey;
+    background: lightgrey;
     height: 5px;
     border: 0px;
    }
@@ -52,3 +57,4 @@ Assignment 2:</h4>
 
 </body>
 </html>
+
