--- a/abm/abm.html
+++ b/abm/abm.html
@@ -5,9 +5,14 @@
 <html>
   <head>
     <title>Personal Website</title>
+	  <style>
+body {
+  background-color: grey;
+}
+</style>
   </head>
 <body>
-  <body style="background-color:darkgrey;">
+
 
 <style>
 * {
