--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Personal Website</title>
 <style>
@@ -9,7 +9,7 @@ body {
 }
 </style>
   </head>
-<body>
+
   
 
 <style>
@@ -23,13 +23,13 @@ body {
 
 <style>
 hr {
-	width="50%";
     background: lightgrey;
     height: 5px;
     border: 0px;
    }
 </style>
-
+<body>
+	
 <h1>Tristan Shearing</h1>
 <h2>Personal Website</h2>
 <hr>
@@ -39,7 +39,7 @@ hr {
 
 
 <p>TRISTAN SHEARING<br/>
-DOB: 19.10.82</br>
+DOB: 19.10.82<br/>
 Location: London, Uk
 </p>
 <hr>
