--- a/abm/abm.html
+++ b/abm/abm.html
@@ -2,18 +2,14 @@
     
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Personal Website</title>
-	  <style>
+<style>
 body {
   background-color: grey;
 }
 </style>
-  </head>
-<body>
-
-
 <style>
 * {
     text-align: center;
@@ -21,17 +17,16 @@ body {
     font-family: Arial;
 }
 </style>
-
-
 <style>
 hr {
-	width="50%";
     background: lightgrey;
     height: 5px;
     border: 0px;
    }
 </style>
-
+</head>
+<body>
+	
 <h1>Tristan Shearing</h1>
 <h2>Personal Website</h2>
 <hr>
