--- a/abm/abm.html
+++ b/abm/abm.html
@@ -33,7 +33,7 @@ hr {
 <h3 class="aligncenter">Assignment 1 Agent-Based model</h3>
     <p class="aligncenter"> <a href="abm.zip" download>Download zip file</a></p>
 	
-<p> <a href="index.html">Back</a>
+<p> <a href="https://trisshearing.github.io/index.html">Back</a>
     
     
   
