--- a/abm/abm.html
+++ b/abm/abm.html
@@ -1,3 +1,6 @@
+
+    
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -23,6 +26,8 @@ hr {
 </style>
 <style>
 *.blocktext {
+	text-align: justify;
+    text-justify: inter-word;
     margin-left: auto;
     margin-right: auto;
     width: 50em
@@ -46,13 +51,13 @@ The colour of the environment reflects the 'height' value of the land, which cha
 <p>Use link below to download zip file, extract all to chosen folder.</p>
 
 <h4>Instructions</h4>
-<ol class="blocktext">
-<li>Run command prompt within folder, or navigate to the folder path.</li>
-<li>Enter "python model.py" into command prompt.</li>
-<li>Input required number of agents ("Sheep") and the number of steps each agent will make ("Mouthfuls").</li>
-<li>The environment will open in a new window. Select Model, Run Model from the menu.</li>
-<li>Model runs. Select Model, Exit from the menu to close the model.</li>
-</ol> 
+<ul class="blocktext">
+<li>1: Run command prompt within folder, or navigate to the folder path.</li>
+<li>2: Enter "python model.py" into command prompt.</li>
+<li>3: Input required number of agents ("Sheep") and the number of steps each agent will make ("Mouthfuls").</li>
+<li>4: The environment will open in a new window. Select Model, Run Model from the menu.</li>
+<li>5: Model runs. Select Model, Exit from the menu to close the model.</li>
+</ul> 
 
 
 
