--- a/abm/abm.html
+++ b/abm/abm.html
@@ -52,11 +52,11 @@ The colour of the environment reflects the 'height' value of the land, which cha
 
 <h4>Instructions</h4>
 <ol class="blocktext">
-<li>1: Run command prompt within folder, or navigate to the folder path.</li>
-<li>2: Enter "python model.py" into command prompt.</li>
-<li>3: Input required number of agents ("Sheep") and the number of steps each agent will make ("Mouthfuls").</li>
-<li>4: The environment will open in a new window. Select Model, Run Model from the menu.</li>
-<li>5: Model runs. Select Model, Exit from the menu to close the model.</li>
+<li>Run command prompt within folder, or navigate to the folder path.</li>
+<li>Enter "python model.py" into command prompt.</li>
+<li>Input required number of agents ("Sheep") and the number of steps each agent will make ("Mouthfuls").</li>
+<li>The environment will open in a new window. Select Model, Run Model from the menu.</li>
+<li>Model runs. Select Model, Exit from the menu to close the model.</li>
 </ol> 
 
 
