--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 <body onload="loadMap();school(); ">
 
 <h1>Safe Routes to Schools</h1>
-<h3 style="text-align: center;">Plan a healthy, safe and enjoyable route to your Dulwich school</h3>
-<hr>
+<!--<h3 style="text-align: center;">Plan a healthy, safe and enjoyable route to your Dulwich school</h3>-->
+<!--<hr>-->
 
-<!--Buttons to open modal and clear isochrone by reloading schools layer -->
-<div class="wrap">
-	<button id="modalButton" class="button" >How to use this map</button>
+<!--Button to open modal-->
+<!--<div class="wrap">-->
+<!--	<button id="modalButton" class="button" >How to use this map</button>-->
 	
 </div>
 <!--Modal element-->
